Rework Monitor table to be based on Entity Changes: - Rename EntityTableModel to CachingTableModel - Refocus the Caching model to be based on items - UnitTable Model no longer needs UnitType or UnitManageListener due ot Settlement filters - Unit implement MonitorableEntity - UnitTableModel is based on MonitorEntity so tiems can be auto listened - TableTab auto sets first columns as sort key; removes the excessive sorting in the subtables - Rename UnitTableModel to EntityMonitorModel to better reflect the purpose - Update the table subclasses
- MissionTableModel converted to EntityMonitorModel and numerous methods removed

Ref #1818